force-app/main/default/objects/Beacon_Contact__c/Beacon_Contact__c.object-meta.xml
<CustomObject>
    <description>Beacon Individual Table</description>
    <label>Beacon Contacts</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Beacon Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beacon Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>