force-app/main/default/objects/Beacon_Contact__c/fields/Account_Data_Loader_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Account_Data_Loader_Identifier__c</fullName>
    <formula>Account_ID__r.Data_Loader_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Data Loader Identifier</label>
    <type>Text</type>
</CustomField>