force-app/main/default/objects/Beacon_Contact__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>Beacon Company ID</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beacon Contacts</relationshipLabel>
    <relationshipName>AccountContacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>