force-app/main/default/objects/Beacon_Contact__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <label>Address 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>