force-app/main/default/objects/Beacon_Contact__c/fields/Address_Type_DID__c.field-meta.xml
<CustomField>
    <fullName>Address_Type_DID__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Manifest</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>