force-app/main/default/objects/Beacon_Contact__c/fields/Beacon_contact_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Beacon_contact_ID_18__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beacon contact ID (18)</label>
    <type>Text</type>
</CustomField>