force-app/main/default/objects/Beacon_Contact__c/fields/Beacon_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Beacon_Contact_Name__c</fullName>
    <formula>First_Name__c + &apos; &apos; +  Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beacon Contact Name</label>
    <type>Text</type>
</CustomField>