force-app/main/default/objects/Beacon_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Master Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Beacon Contacts</relationshipLabel>
    <relationshipName>Beacon_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>