force-app/main/default/objects/Beacon_Contact__c/fields/CS_Ecomm__c.field-meta.xml
<CustomField>
    <fullName>CS_Ecomm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ecomm</label>
    <type>Checkbox</type>
</CustomField>