force-app/main/default/objects/Beacon_Contact__c/fields/CS_Emailed_Invoices__c.field-meta.xml
<CustomField>
    <fullName>CS_Emailed_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Beacon CS Emailed Invoices</description>
    <label>CC On Emailed Invoices</label>
    <type>Checkbox</type>
</CustomField>