force-app/main/default/objects/Beacon_Contact__c/fields/CS_Key__c.field-meta.xml
<CustomField>
    <fullName>CS_Key__c</fullName>
    <description>Beacon CS Key Field</description>
    <label>Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>