force-app/main/default/objects/Beacon_Contact__c/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCT</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>CERT</fullName>
            </value>
            <value>
                <fullName>COMP</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>CUST</fullName>
            </value>
            <value>
                <fullName>DEA</fullName>
            </value>
            <value>
                <fullName>ENG</fullName>
            </value>
            <value>
                <fullName>ENV</fullName>
            </value>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>EXP</fullName>
            </value>
            <value>
                <fullName>HEAL</fullName>
            </value>
            <value>
                <fullName>HIS</fullName>
            </value>
            <value>
                <fullName>MAIN</fullName>
            </value>
            <value>
                <fullName>MANI</fullName>
            </value>
            <value>
                <fullName>PURC</fullName>
            </value>
            <value>
                <fullName>REM</fullName>
            </value>
            <value>
                <fullName>SALE</fullName>
            </value>
            <value>
                <fullName>SCHD</fullName>
            </value>
            <value>
                <fullName>SHIP</fullName>
            </value>
            <value>
                <fullName>TECH</fullName>
            </value>
            <value>
                <fullName>TRAK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>