force-app/main/default/objects/Beacon_Contact__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Beacon Email Field</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>