force-app/main/default/objects/Beacon_Contact__c/fields/Email_Entered_Flag__c.field-meta.xml
<CustomField>
    <fullName>Email_Entered_Flag__c</fullName>
    <formula>if (isblank(Email__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Entered Flag</label>
    <type>Checkbox</type>
</CustomField>