force-app/main/default/objects/Beacon_Contact__c/fields/Email_Main_or_Scheduled_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Email_Main_or_Scheduled_Indicator__c</fullName>
    <formula>if( Email_Entered_Beacon__c = &apos;Entered&apos;, 1, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Main or Scheduled Indicator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>