force-app/main/default/objects/Beacon_Contact__c/fields/Email_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Owner_ID__c</fullName>
    <label>Email Owner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>