force-app/main/default/objects/Beacon_Contact__c/fields/Email_Text_DID__c.field-meta.xml
<CustomField>
    <fullName>Email_Text_DID__c</fullName>
    <label>Email Type DID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>