force-app/main/default/objects/Beacon_Contact__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Beacon First Name</description>
    <inlineHelpText>If not entered, copied from the Master Contact</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>