force-app/main/default/objects/Beacon_Contact__c/fields/Individual_ID__c.field-meta.xml
<CustomField>
    <fullName>Individual_ID__c</fullName>
    <description>Beacon Individual ID</description>
    <label>Individual ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>