force-app/main/default/objects/Beacon_Contact__c/fields/Invalid_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Main_Contact__c</fullName>
    <formula>If( 
And( 
Account_ID__r.Expired__c = false, 
or( 
CONTAINS(Beacon_Contact_Name__c, &quot;Main&quot;), 
CONTAINS(Beacon_Contact_Name__c, &quot;Contact&quot;), 
CONTAINS(Beacon_Contact_Name__c, &quot;None&quot;), 
CONTAINS(Beacon_Contact_Name__c, &quot;Not&quot;), 
ISBLANK( Phone__c ), 
Phone__c = &apos;111111111&apos;, 
Phone__c = &apos;2222222222&apos;, 
Phone__c = &apos;3333333333&apos;, 
Phone__c = &apos;4444444444&apos;, 
Phone__c = &apos;5555555555&apos;, 
Phone__c = &apos;6666666666&apos;, 
Phone__c = &apos;7777777777&apos;, 
Phone__c = &apos;8888888888&apos;, 
Phone__c = &apos;9999999999&apos;, 
CONTAINS(Phone__c, &quot;123456789&quot;), 
ISBLANK( Email__c ), 
CONTAINS(Email__c , &quot;refus&quot;), 
CONTAINS(Email__c , &quot;pendin&quot;), 
CONTAINS(Email__c , &quot;none&quot;), 
CONTAINS(Email__c , &quot;noemail&quot;), 
CONTAINS(Email__c , &quot;didntask&quot;), 
CONTAINS(Email__c , &quot;dontknow&quot;) 
) 
), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invalid Main Contact</label>
    <type>Checkbox</type>
</CustomField>