force-app/main/default/objects/Beacon_Contact__c/fields/Last_Modified_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_DateTime__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified DateTime</label>
    <type>DateTime</type>
</CustomField>