force-app/main/default/objects/Beacon_Contact__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Beacon Last Name</description>
    <inlineHelpText>If not entered, copied from the Master Contact</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>