force-app/main/default/objects/Beacon_Contact__c/fields/Locality1__c.field-meta.xml
<CustomField>
    <fullName>Locality1__c</fullName>
    <label>City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>