force-app/main/default/objects/Beacon_Contact__c/fields/Match_Master_Contact__c.field-meta.xml
<CustomField>
    <fullName>Match_Master_Contact__c</fullName>
    <description>Does first name, last name, email address match Beacon and Master contact</description>
    <formula>and(
 Lower(First_Name__c) =  Lower(Contact__r.FirstName)
,Lower(Last_Name__c) =  Lower(Contact__r.LastName)
,Lower(Email__c) =  Lower(Contact__r.Email)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Match Master Contact</label>
    <type>Checkbox</type>
</CustomField>