force-app/main/default/objects/Beacon_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Beacon Contact Phone</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>