force-app/main/default/objects/Beacon_Contact__c/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <label>State</label>
    <length>4</length>
    <type>Text</type>
</CustomField>