force-app/main/default/objects/Beacon_Contact__c/fields/Secondary_ID__c.field-meta.xml
<CustomField>
    <fullName>Secondary_ID__c</fullName>
    <description>Beacon Secondary ID</description>
    <label>Secondary ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>