force-app/main/default/objects/Beacon_Contact__c/fields/Title_Code__c.field-meta.xml
<CustomField>
    <fullName>Title_Code__c</fullName>
    <label>Title Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>