force-app/main/default/objects/Beacon_Contact__c/fields/WIN_Compliance_Errors__c.field-meta.xml
<CustomField>
    <fullName>WIN_Compliance_Errors__c</fullName>
    <description>In course of validation, if there are any errors, those errors are captured on this field and are presented to the user for necessary correction</description>
    <label>WIN Compliance Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>