force-app/main/default/objects/Beacon_Contact__c/fields/WIN_ID__c.field-meta.xml
<CustomField>
    <fullName>WIN_ID__c</fullName>
    <formula>Account_ID__r.WIN_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIN ID</label>
    <type>Text</type>
</CustomField>