force-app/main/default/objects/Beacon_Contact__c/fields/WIN_Validated__c.field-meta.xml
<CustomField>
    <fullName>WIN_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A boolean flag which determines if the record is validated based on WIN Complaint rules. All records with value as TRUE are then extracted by Beacon for downstream processing.</description>
    <label>WIN Validated?</label>
    <type>Checkbox</type>
</CustomField>