force-app/main/default/objects/Beacon_Contact__c/recordTypes/Beacon_Contact.recordType-meta.xml
<RecordType>
    <fullName>Beacon_Contact</fullName>
    <active>true</active>
    <label>Beacon Contact</label>
</RecordType>