force-app/main/default/objects/Beacon_Contact__c/validationRules/Beacon_Contact_Phone_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Beacon_Contact_Phone_Length</fullName>
    <active>true</active>
    <description>Phone length</description>
    <errorConditionFormula>and(NOT ($Profile.Name = &quot;Integration&quot;), 
    NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;Sales Operations&quot;, 
not(isblank(Phone__c)),
or((LEN(Phone__c)&gt;14), 
(LEN(Phone__c)&lt;10)
) 
)</errorConditionFormula>
    <errorMessage>Phone/Mobile number length is invalid.</errorMessage>
</ValidationRule>