force-app/main/default/objects/Beacon_Contact__c/validationRules/MANIFEST_ADDRESS_REQUIREMENT.validationRule-meta.xml
<ValidationRule>
    <fullName>MANIFEST_ADDRESS_REQUIREMENT</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
NOT ($Profile.Name = &quot;Integration&quot;),
NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
ISPICKVAL(Department_Code__c ,&quot;MANI&quot;),
ISBLANK(Account_ID__r.Manifest_Address1__c )),

OR(
AND(
ISPICKVAL(PRIORVALUE( Department_Code__c ), &quot;MANI&quot;),  
NOT ISPICKVAL( Department_Code__c , &quot;EXP&quot;), 
NOT ISPICKVAL( Department_Code__c , &quot;MANI&quot;))))</errorConditionFormula>
    <errorDisplayField>Department_Code__c</errorDisplayField>
    <errorMessage>1. If MANI is selected - Manifest address on related Account is required. 2.MANI contact type can be only changed to EXP.</errorMessage>
</ValidationRule>