force-app/main/default/objects/Beacon_Contact__c/listViews/Beacon_Contacts_updated_Today.listView-meta.xml
<ListView>
    <fullName>Beacon_Contacts_updated_Today</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Beacon_Contact_Name__c</columns>
    <columns>Title__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/22/2018 12:00 AM</value>
    </filters>
    <label>Beacon Contacts updated Today</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_but_CEO</group>
    </sharedTo>
</ListView>