force-app/main/default/objects/Beacon_Contact__c/listViews/Updated_Today.listView-meta.xml
<ListView>
    <fullName>Updated_Today</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Updated Today</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_but_CEO</group>
    </sharedTo>
</ListView>